<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Instruccion"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Selector"
        android:layout_gravity="left|top">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cuadro"
            android:id="@+id/Cuadro"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Triangulo"
            android:id="@+id/Triangulo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rectangulo"
            android:id="@+id/Rectangulo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Circulo"
            android:id="@+id/Circulo"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/Base"
        android:inputType="number"
        android:cursorVisible="false"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/Altura"
        android:inputType="number"
        android:cursorVisible="false"
        android:hint="@string/Altura" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calcular"
        android:id="@+id/Calcular"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/Print"/>

</LinearLayout>
